fixed Duelling DQN

--- a/Duelling Deep-Q Networks/Report.ipynb
+++ b/Duelling Deep-Q Networks/Report.ipynb
@@ -6,94 +6,74 @@
    "source": [
     "## Learning Algorithm\n",
     "\n",
-    "The learning algorithm implemented for this assignment is <a href=\"https://arxiv.org/pdf/1802.09477.pdf\">TD3</a> which addresses the overestimation bias of <a href=\"https://arxiv.org/abs/1509.02971\">DDPG</a> - an off-policy, actor/critic network that inherits concepts from Deep-Q Learning such as _Experience Replay_ and _Fixed Q-Targets_ to train environments with continuous action spaces. The main fundamental difference between TD3 and DDPG is the use of two critic networks to estimate Q-values, using the smaller of the two to form the targets in the Bellman error loss functions. Other differences include:\n",
-    "\n",
-    " - the use of noise to regularize target actions, used by the critic to estimate Q-values\n",
-    " - delayed update of the actor network\n",
-    "  \n",
-    "For this assignment, I trained an agent using both __DDPG__ and __TD3__ and the learning plots are displayed below. DDPG took ~3500 episodes to complete the task (i.e. achieve an average score of +30 over 100 consecutive episodes) and i found it difficult to settle on good hyper-parameters. Additionally, as can be seen, there is a lot of variance across episodes and the trajectory is not as smooth as TD3 which took ~442 episodes to complete the task! \n",
+    "The learning algorithm implemented for this assignment is the <a href=\"https://arxiv.org/pdf/1511.06581.pdf\">Dueling Network</a>. The architecture is similiar to a Deep Q-Network, employing the same fundamental tenets such as experience replay and fixed-Q targets. The primary difference is in the estimation of $Q$ values. Rather than estimating $Q(s,a)$  directly, the duelling network seperates the final fully connected linear layer of a a DQN into two streams: one to estimate the state value $V(s)$ and the other to estimate the advantage $A(s,a)$ of taking an action $a$ in state $s$, with $Q(s,a)$ estimated with:\n",
     "\n",
     "<br>\n",
     "\n",
-    "\n",
-    "\n",
-    "DDPG            |  TD3\n",
-    ":-------------------------:|:-------------------------:\n",
-    "<img src=\"img/DPDG_Continuous_Control.png\"> |  <img src=\"img/TD3_Continuous_Control.png\">\n",
-    "\n",
+    "$$Q(s,a) = V(s) + A(s,a)$$\n",
     "\n",
     "<br>\n",
     "\n",
-    "\n",
-    "\n",
-    "### Architecture and Hyperparameters\n",
-    "\n",
-    "\n",
-    "The network architecture and hyperparameters for the TD3 model are below\n",
+    "The input is a state vector from the Unity ML Engine fed into a deep neural network with the below architecture:\n",
     "\n",
     "<br>\n",
     "\n",
-    "\n",
-    "<center> Actor </center>\n",
     "\n",
     "| Layer | Input  | Output   |   \n",
     "|:-------|:--------|:----------|\n",
-    "|FC1    |   33 (state space)  |  400       |   \n",
-    "|FC2    |   400   |  300      |   \n",
-    "|FC3    |   300     |   4 (action space)    |\n",
+    "|FC1    |   37 (state space)  |  64       |   \n",
+    "|FC2    |   64   |  64      |   \n",
+    "|Advantage    |   64     |   4 (action space)    |  \n",
+    "|Value      |  64    |   1      |   \n",
     "    \n",
-    "<br>\n",
-    "<br>\n",
     "\n",
-    "<center> Critic </center>\n",
     "\n",
-    "| Layer | Input  | Output   |   \n",
-    "|:-------|:--------|:----------|\n",
-    "|FC1    |   37 (state space) + 4 (action space)   |  400       |   \n",
-    "|FC2    |   400    |  300      |   \n",
-    "|FC3    |   300     |   1  (Q-value)  |\n",
-    "\n",
-    "<br>\n",
     "\n",
     "####  Parameters used for training :\n",
     "\n",
     "```python\n",
     "\n",
-    "BUFFER_SIZE = int(1e6)  # replay buffer size\n",
-    "BATCH_SIZE = 512        # minibatch size\n",
-    "GAMMA = 0.99            # discount factor\n",
-    "TAU = 5e-3              # for soft update of target parameters\n",
-    "LR_ACTOR = 1e-5         # learning rate of the actor\n",
-    "LR_CRITIC = 1e-4        # learning rate of the critic\n",
-    "WEIGHT_DECAY = 0        # L2 weight decay\n",
-    "UPDATE_EVERY = 2        # Steps to update agent\n",
+    "BUFFER_SIZE = int(1e5), # replay buffer size\n",
+    "BATCH_SIZE = 256,        # minibatch size sampled from the replay buffer\n",
+    "GAMMA = 0.99,           # discount factor\n",
+    "TAU = 1e-3,             # for soft update of target parameters\n",
+    "LR =  5e-4,             # learning rate\n",
+    "UPDATE_EVERY = 16        # how often to update the network\n",
     "\n",
-    "```"
+    "```\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
+    "## Plot of Rewards\n",
     "\n",
+    "Below is a plot of the agents score during training. The agent is able to collect an average reward (over 100 episodes) of at least __+13__ after __641 episodes__. In the code, the agent stops training as soon as it is able to achieve this score, but if we had left it to train longer then it would have achieved a higher score.\n",
+    "\n",
+    "<img src=\"img/training.png\">\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Ideas for Future Work\n",
     "\n",
     "A few things that can be tried to improve model performance are:\n",
     "\n",
-    "1. Tuning of hyper-parameters:\n",
+    "- hyperparamer tuning of:\n",
     "\n",
     "\n",
     "    - number of hidden cells\n",
     "    - number of hidden layers\n",
-    "    - actor/ critic learning rates\n",
+    "    - number of steps before calculating loss and updating the target network\n",
+    "    - type of optimizer/ learning rate\n",
     "    - batch size\n",
-    "    - noise regularization\n",
     "    \n",
-    "2. Try other algorithms such as D4PG, A2C and PPO and see how they compare."
+    "- augment the current model with <a href=\"https://arxiv.org/abs/1511.05952\"> prioritized experience replay</a> and <a href=\"https://arxiv.org/abs/1509.06461\"> double DQN </a> \n",
+    "- train the agent on raw pixels using a __convnet__"
    ]
   }
  ],
@@ -114,15 +94,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.10"
-  },
-  "pycharm": {
-   "stem_cell": {
-    "cell_type": "raw",
-    "source": [],
-    "metadata": {
-     "collapsed": false
-    }
-   }
   }
  },
  "nbformat": 4,
